# rig-tools

./: Cargo.toml
locales/: de.toml  en.toml
src/: bash.rs  edit_file.rs  glob.rs  grep.rs  lib.rs  ls.rs  powershell.rs  read_file.rs  web_fetch.rs  write_file.rs
