[package]
name = "rig-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
globset = "0.4"
ignore = "0.4"
regex = "1"
rig-core = "0.35.0"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
