[package]
name = "rig-tools"
version = "0.2.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ego-tree = "0.6"
globset = "0.4"
htmd = "0.5"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
rig-core = "0.36.0"
rust-i18n = "3"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "process", "time", "macros", "rt"] }
